# mofappanalyser

./: .gitignore  pyproject.toml
mofappanalyser/read_write/: clean_data.py  download.py  filetyper.py
mofappanalyser/train/: topic_module.py
